# nand2tetris

./: README.md
01/: Xor.hdl
02/: ALU.hdl
03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
04/fill/: Fill.asm
04/mult/: Mult.asm
05/: CPU.hdl  Computer.hdl  Memory.hdl
06/HackAssembler/: Cargo.toml
06/HackAssembler/src/: main.rs
07/: .gitignore  test.ps1  test.sh
07/VMTranslator/: CodeWriter.py  Instructions.py  Parser.py  VMTranslator.py  parser.py  vm.py  writer.py
