[package]
name = "hack_assembler"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Delazeri <contato@hdelazeri.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }
regex = "1.5.4"